--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -49,7 +49,7 @@ year = {2020}
 }
 
 @article{Combettes:2011,
-  author = {Combettes, Patrick and Pesquet, Jean-Christophe},
+  author = {Combettes, Patrick L. and Pesquet, Jean-Christophe},
   year = {2011},
   month = {06},
   pages = {1-24},
@@ -60,7 +60,7 @@ year = {2020}
   }
 
 @article{Combettes:2020a,
-author = {Combettes, Patrick L. and M{\"u}ller, Christian L.},
+author = {Patrick L. Combettes and M{\"u}ller, Christian L.},
 doi = {10.1214/19-EJS1662},
 fjournal = {Electronic Journal of Statistics},
 journal = {Electron. J. Statist.},
@@ -75,7 +75,7 @@ year = {2020}
 
 @article{Combettes:2020b,
     Abstract = {Compositional data sets are ubiquitous in science, including geology, ecology, and microbiology. In microbiome research, compositional data primarily arise from high-throughput sequence-based profiling experiments. These data comprise microbial compositions in their natural habitat and are often paired with covariate measurements that characterize physicochemical habitat properties or the physiology of the host. Inferring parsimonious statistical associations between microbial compositions and habitat- or host-specific covariate data is an important step in exploratory data analysis. A standard statistical model linking compositional covariates to continuous outcomes is the linear log-contrast model. This model describes the response as a linear combination of log-ratios of the original compositions and has been extended to the high-dimensional setting via regularization. In this contribution, we propose a general convex optimization model for linear log-contrast regression which includes many previous proposals as special cases. We introduce a proximal algorithm that solves the resulting constrained optimization problem exactly with rigorous convergence guarantees. We illustrate the versatility of our approach by investigating the performance of several model instances on soil and gut microbiome data analysis tasks.},
-    Author = {Combettes, Patrick L. and M{\"u}ller, Christian L.},
+    Author = {Patrick L. Combettes and M{\"u}ller, Christian L.},
     Da = {2020/06/19},
     Date-Added = {2020-07-07 12:02:54 +0000},
     Date-Modified = {2020-07-07 12:02:54 +0000},
@@ -210,20 +210,20 @@ year = {2019}
 }
 
 
-@article{Rosset:2007,
-    author = "Rosset, Saharon and Zhu, Ji",
-    doi = "10.1214/009053606000001370",
-    fjournal = "Annals of Statistics",
-    journal = "Ann. Statist.",
-    month = "07",
-    number = "3",
-    pages = "1012--1030",
-    publisher = "The Institute of Mathematical Statistics",
-    title = "Piecewise linear regularized solution paths",
-    url = "https://doi.org/10.1214/009053606000001370",
-    volume = "35",
-    year = "2007"
-    }
+@article{Rosset2007,
+abstract = {We consider the generic regularized optimization problem {\$}\backslashhat{\{}\backslashmathsf{\{}\backslashbeta{\}}{\}}(\backslashlambda)=\backslasharg \backslashmin{\_}{\{}\backslashbeta{\}}L({\{}\backslashsf{\{}y{\}}{\}},X{\{}\backslashsf{\{}\backslashbeta{\}}{\}})+\backslashlambda J({\{}\backslashsf{\{}\backslashbeta{\}}{\}}){\$}. Efron, Hastie, Johnstone and Tibshirani [Ann. Statist. 32 (2004) 407--499] have shown that for the LASSO--that is, if {\$}L{\$} is squared error loss and {\$}J(\backslashbeta)=\backslash|\backslashbeta\backslash|{\_}1{\$} is the {\$}\backslashell{\_}1{\$} norm of {\$}\backslashbeta{\$}--the optimal coefficient path is piecewise linear, that is, {\$}\backslashpartial \backslashhat{\{}\backslashbeta{\}}(\backslashlambda)/\backslashpartial \backslashlambda{\$} is piecewise constant. We derive a general characterization of the properties of (loss {\$}L{\$}, penalty {\$}J{\$}) pairs which give piecewise linear coefficient paths. Such pairs allow for efficient generation of the full regularized coefficient paths. We investigate the nature of efficient path following algorithms which arise. We use our results to suggest robust versions of the LASSO for regression and classification, and to develop new, efficient algorithms for existing problems in the literature, including Mammen and van de Geer's locally adaptive regression splines.},
+author = {Rosset, Saharon and Zhu, Ji},
+doi = {10.1214/009053606000001370},
+issn = {00905364},
+journal = {Annals of Statistics},
+keywords = {Polynomial splines,Regularization,Solution paths,Sparsity,Total variation,ℓ1-norm penalty},
+number = {3},
+pages = {1012--1030},
+title = {{Piecewise linear regularized solution paths}},
+volume = {35},
+year = {2007}
+}
+
 
 
 @article{Shi:2016,
