--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -227,19 +227,21 @@ year = {2007}
 
 
 @article{Shi:2016,
-    author = "Shi, Pixu and Zhang, Anru and Li, Hongzhe",
-    doi = "10.1214/16-AOAS928",
-    fjournal = "Annals of Applied Statistics",
-    journal = "Ann. Appl. Stat.",
-    month = "06",
-    number = "2",
-    pages = "1019--1040",
-    publisher = "The Institute of Mathematical Statistics",
-    title = "Regression analysis for microbiome compositional data",
-    url = "https://doi.org/10.1214/16-AOAS928",
-    volume = "10",
-    year = "2016"
-    }
+abstract = {One important problem in microbiome analysis is to identify the bacterial taxa that are associated with a response, where the microbiome data are summarized as the composition of the bacterial taxa at different taxonomic levels. This paper considers regression analysis with such compositional data as covariates. In order to satisfy the subcompositional coherence of the results, linear models with a set of linear constraints on the regression coefficients are introduced. Such models allow regression analysis for subcompositions and include the log-contrast model for compositional covariates as a special case. A penalized estimation procedure for estimating the regression coefficients and for selecting variables under the linear constraints is developed. A method is also proposed to obtain debiased estimates of the regression coefficients that are asymptotically unbiased and have a joint asymptotic multivariate normal distribution. This provides valid confidence intervals of the regression coefficients and can be used to obtain the p-values. Simulation results show the validity of the confidence intervals and smaller variances of the debiased estimates when the linear constraints are imposed. The proposed methods are applied to a gut microbiome data set and identify four bacterial genera that are associated with the body mass index after adjusting for the total fat and caloric intakes.},
+archivePrefix = {arXiv},
+arxivId = {1603.00974},
+author = {Shi, Pixu and Zhang, Anru and Li, Hongzhe},
+doi = {10.1214/16-AOAS928},
+eprint = {1603.00974},
+issn = {19417330},
+journal = {Annals of Applied Statistics},
+keywords = {Compositional coherence,Coordinate descent method of multipliers,High dimension,Log-contrast model,Model selection,Regularization},
+number = {2},
+pages = {1019--1040},
+title = {{Regression analysis for microbiome compositional data}},
+volume = {10},
+year = {2016}
+}
 
 
 
